<resources>
    <string name="app_name">MangaViewer</string>
    <string name="title_activity_page">PageActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="buttonContinueText">Continuer</string>
    <string name="buttonChooseDir">Changer Dossier</string>
    <string name="buttonUpdate">Actualiser</string>
    <string name="imageDescription">Une image</string>
    <string name="derniereImage">Ceci est la dernière page de l\'histoire</string>
    <string name="premiereImage">Ceci est la première page de l\'histoire</string>
    <string name="fileNotFound">File Not Found</string>
    <integer name="tempsToast">3</integer>
    <string name="title_activity_image">ImageActivity</string>
    <string name="home">Accueil</string>
    <string name="miniature">miniature</string>
    <string name="goToPage">Changer de page</string>
    <string name="parameter">Parametre</string>
    <string name="errorInvalidNumber">Chiffre invalide. Veuillez saisir un chiffre entre 1 et </string>
    <string name="askNumber">Saisir un chiffre entre 1 et </string>
    <string name="validationButton">OK</string>
    <string name="cancelButton">Annuler</string>
    <string name="Activatesplitview">Activer le split des pages larges</string>
    <string name="FirstPage">La première page sera celle de : </string>
    <string name="Left">Gauche</string>
    <string name="Right">Droite</string>
    <string name="Activatefullviewbefore">Activer la vue complète avant</string>
    <string name="Activatefullviewbetween">Activer la vue complète entre</string>
    <string name="Activatefullviewafter">Activer la vue complète après</string>
    <string name="Overlap">Superposition</string>
    <string name="ActivateScrollmode">Activer le mode Scroll</string>
    <string name="Export">Exporter les données</string>
    <string name="Import">Importer les données</string>
    <string name="SaveSucess">Fichier créé avec succès</string>
    <string name="SaveFail">Erreur lors de la création du fichier</string>

</resources>